# rocket-latam-workshop

./: .gitignore  Cargo.toml  README.md
0-hello-world/: Cargo.toml  README.md
0-hello-world/src/: main.rs  tests.rs
1-hello-person/: Cargo.toml  README.md
1-hello-person/src/: main.rs  tests.rs
2-segments/: Cargo.toml  README.md
2-segments/src/: main.rs  tests.rs
3-data/: Cargo.toml  README.md
3-data/src/: main.rs  tests.rs
4-forms/: Cargo.toml  README.md
4-forms/src/: main.rs  tests.rs
5-responders/: Cargo.toml  README.md
5-responders/src/: main.rs  tests.rs
5-responders/templates/: task.html.tera  tasks.html.tera
6-request-guards/: Cargo.toml  README.md
6-request-guards/src/: main.rs  roles.rs  tests.rs
6-request-guards/static/: login.html
7-state/: Cargo.toml  README.md
7-state/src/: main.rs  tests.rs
8-databases/: Cargo.toml  README.md  Rocket.toml  tasks.sqlite
8-databases/src/: main.rs  tests.rs
9-cfp/: Cargo.toml  README.md  Rocket.toml
9-cfp/migrations/2018-07-23-194250_initial_db/: down.sql  up.sql
9-cfp/migrations/2018-08-11-150119_admin_users/: down.sql  up.sql
9-cfp/src/: auth.rs  main.rs  schema.rs  talk.rs  user.rs
9-cfp/templates/: base.html.tera  welcome.html.tera
