[package]
name = "cfp"
version = "0.0.0"
publish = false

[dependencies]
diesel = "1.3"
diesel_migrations = "1.3"
log = "0.4"
rand = "0.5"
reqwest = "0.8"
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4"
default_features = false
features = ["diesel_sqlite_pool", "tera_templates", "serve"]
